Wrking in ImagePolicyWebhook

--- a/2-ImagePolicyWebhook/Dockerfile
+++ b/2-ImagePolicyWebhook/Dockerfile
@@ -1,33 +1,17 @@
-# Start with a minimal Go image
-FROM golang:1.20 as builder
+FROM golang:1.20
 
-# Set working directory
+# Set the working directory inside the container
+
+
+# Copy the Go application into the container
+COPY /app /app
+
+
+# Workdire
 WORKDIR /app
 
-# Copy Go modules and source code
-COPY go.mod go.sum ./
-RUN go mod download
-
-COPY . .
-
-# Build the application
-RUN go build -o webhook .
-
-# Final image
-FROM debian:bullseye-slim
-
-# Set up working directory
-WORKDIR /app
-
-# Copy TLS certificates (ensure they're added at build time)
-COPY certs /app/certs
-
-# Copy the built binary
-COPY --from=builder /app/webhook /app/webhook
-
-# Expose the webhook port
+# Expose the application port (optional, depending on your app)
 EXPOSE 8080
 
-# Run the webhook
-CMD ["/app/webhook"]
-
+# Run the Go application
+CMD ["go", "run", "main.go"]
